--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@pixi/react": "^7.1.0",
     "@react-three/drei": "^9.80.1",
     "@react-three/fiber": "^8.13.6",
+    "@react-three/rapier": "^1.1.1",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.39",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "@types/three": "^0.155.0",
     "dat.gui": "^0.7.9",
+    "gsap": "^3.12.2",
     "maath": "^0.7.0",
     "pixi.js": "^7.2.4",
     "prettier": "^3.0.1",
